--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -5,7 +5,7 @@
     "version" : "1.0",
     
     "content_scripts" : [{
-        "matches" : ["https://*.youtube.com/watch?v=*"],
+        "matches" : ["https://*.youtube.com/"],
         "js" : ["js-dependencies/firebase-app.js", 
                 "js-dependencies/firebase-database.js",
                 "js-dependencies/firebase-auth.js",
