started working on this again; added weighted start point selection; updated README

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -3,12 +3,21 @@
     "description" : "Skip YouTube music video intros",
     "manifest_version": 2,
     "version" : "1.0",
-    
+    "permissions" : [
+        "activeTab",
+        "tabs"
+    ],
+    "background" : {
+    },
     "content_scripts" : [{
         "matches" : ["https://*.youtube.com/*"],
         "js" : ["js-dependencies/firebase-app.js", 
                 "js-dependencies/firebase-database.js",
                 "js-dependencies/firebase-auth.js",
                 "content.js"]
-    }]
+    }],
+    "browser_action" : {
+        "default_icon" : "goto-music16x16.png",
+        "default_popup" : "popup.html"
+    }
 }
