Finished initial extension code

--- a/backend/kdtree/CMakeLists.txt
+++ b/backend/kdtree/CMakeLists.txt
@@ -10,11 +10,15 @@ project (ParallelKDTree)
 find_package (Python REQUIRED COMPONENTS Development)
 find_package (OpenMP REQUIRED)
 
-add_library (ParallelKDTree SHARED temp.c)
+add_library (ParallelKDTree SHARED module.c)
+
+if (NOT WIN32)
+set_target_properties (ParallelKDTree PROPERTIES SUFFIX ".so")
+endif()
 
 # Add Python include/linker flags
 target_include_directories (ParallelKDTree PRIVATE "${Python_INCLUDE_DIRS}")
-target_link_libraries(ParallelKDTree PRIVATE "${Python_LIBRARIES}")
+target_link_libraries (ParallelKDTree PRIVATE "${Python_LIBRARIES}")
 
 # Add OpenMP linker flags
 target_link_libraries (ParallelKDTree PRIVATE "${OpenMP_C_FLAGS}")
