test commit from new computer

--- a/backend/kdtree/CMakeLists.txt
+++ b/backend/kdtree/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (NOT WIN32)
-# Set compiler paths below, or comment out to use default compiler
-set (CMAKE_C_COMPILER "/usr/local/bin/gcc")
-set (CMAKE_CXX_COMPILER "/usr/local/bin/g++")
+    # Set compiler paths below, or comment out to use default compiler
+    set (CMAKE_C_COMPILER "/usr/bin/gcc")
+    set (CMAKE_CXX_COMPILER "/usr/bin/g++")
 endif ()
 
 cmake_minimum_required (VERSION 3.0)
@@ -25,7 +25,7 @@ target_include_directories (pkd PRIVATE "${PKD_INCLUDE_DIR}")
 
 set_target_properties (pkd PROPERTIES PREFIX "")
 if (NOT WIN32)
-set_target_properties (pkd PROPERTIES SUFFIX ".so")
+    set_target_properties (pkd PROPERTIES SUFFIX ".so")
 endif()
 
 # Add Python include/linker flags
