--- a/backend/kdtree/CMakeLists.txt
+++ b/backend/kdtree/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (NOT WIN32)
     # Set compiler paths below, or comment out to use default compiler
-    set (CMAKE_C_COMPILER "/usr/bin/gcc")
-    set (CMAKE_CXX_COMPILER "/usr/bin/g++")
+    # set (CMAKE_C_COMPILER "/usr/bin/gcc")
+    # set (CMAKE_CXX_COMPILER "/usr/bin/g++")
 endif ()
 
 cmake_minimum_required (VERSION 3.0)
